fix: QBtn word-wrap: break-word; not working #659

--- a/src/components/btn/button.ios.styl
+++ b/src/components/btn/button.ios.styl
@@ -15,7 +15,6 @@ button-round-factor($size)
   -webkit-appearance button
   padding $button-padding
   text-decoration none
-  white-space nowrap
   color inherit
   background transparent
   transition $button-transition
