--- a/src/components/btn/button.mat.styl
+++ b/src/components/btn/button.mat.styl
@@ -16,7 +16,6 @@ button-round-factor($size)
   padding $button-padding
   font-weight $button-font-weight
   text-decoration none
-  white-space nowrap
   color inherit
   background transparent
   box-shadow $shadow-2
