--- a/src/components/fab/fab.ios.styl
+++ b/src/components/fab/fab.ios.styl
@@ -15,7 +15,6 @@
     opacity 1
 
 .q-fab-icon, .q-fab-active-icon
-  position absolute
   transition opacity .4s, transform .4s
 .q-fab-icon
   opacity 1
